CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11.2 FATAL_ERROR)

SET(PROJ_NAME WAMP_POCO)
PROJECT(${PROJ_NAME})

IF(UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ENDIF()

ADD_EXECUTABLE(${PROJ_NAME} ../autobahn/autobahn.cpp ../autobahn/util/SHA256Engine.cpp main.cpp)

TARGET_LINK_LIBRARIES(${PROJ_NAME} PocoFoundation PocoNet PocoJSON PocoNetSSL)
TARGET_INCLUDE_DIRECTORIES(${PROJ_NAME} PRIVATE ../autobahn)
