CMAKE_MINIMUM_REQUIRED(VERSION 3.2.1 FATAL_ERROR)

PROJECT(WAMP_POCO)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

FIND_PACKAGE(Poco REQUIRED COMPONENTS Foundation Util Net NetSSL Crypto JSON)
FIND_PACKAGE(OpenSSL REQUIRED)

ADD_EXECUTABLE(${PROJECT_NAME}
    ../../autobahn/autobahn.cpp
    ../../autobahn/ApplicationWebSocket.cpp
    ../../autobahn/util/SHA256Engine.cpp
    main.cpp
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} Poco::Foundation Poco::Net Poco::JSON Poco::NetSSL ${OPENSSL_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ../../autobahn ${OPENSSL_INCLUDE_DIR})
